WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312542
REGRESSION(
311414@main
): Double-quoted include "FloatSize.h" in framework header, expected angle-bracketed instead
https://bugs.webkit.org/show_bug.cgi?id=312542
Summary
REGRESSION(311414@main): Double-quoted include "FloatSize.h" in framework hea...
Jonathan Bedard
Reported
2026-04-16 21:04:24 PDT
https://commits.webkit.org/311414@main
broke Apple Internal builds.
Attachments
Add attachment
proposed patch, testcase, etc.
Jonathan Bedard
Comment 1
2026-04-16 21:04:25 PDT
<
rdar://problem/174977620
>
Jonathan Bedard
Comment 2
2026-04-16 21:05:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62948
EWS
Comment 3
2026-04-16 21:08:55 PDT
Committed
311419@main
(0f01904902b3): <
https://commits.webkit.org/311419@main
> Reviewed commits have been landed. Closing PR #62948 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug