Cherry-pick 311419@main (0f01904902b3). rdar://181054870

REGRESSION(311414@main): Double-quoted include "FloatSize.h" in framework header, expected angle-bracketed instead
    https://bugs.webkit.org/show_bug.cgi?id=312542
    rdar://174977620

    Unreviewed build fix.

    * Source/WebCore/platform/graphics/ImageResolution.h:

    Canonical link: https://commits.webkit.org/311419@main

Canonical link: https://commits.webkit.org/305413.1053@safari-7624.5-branch